--- a/public/index.html
+++ b/public/index.html
@@ -1,43 +1,119 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
   <head>
     <meta charset="UTF-8" />
     <title>Love for Maharani</title>
+    <style>
+      body {
+        font-family: Arial, sans-serif;
+        background: #ffe6f2;
+        text-align: center;
+        padding: 50px;
+      }
+      .love-box {
+        background: white;
+        padding: 30px;
+        width: 350px;
+        margin: auto;
+        border-radius: 15px;
+        box-shadow: 0 0 10px pink;
+      }
+      #message {
+        margin-top: 20px;
+        font-size: 20px;
+        color: #d10063;
+        font-weight: bold;
+      }
+      button {
+        padding: 12px 22px;
+        background: #ff3385;
+        border: none;
+        color: white;
+        border-radius: 10px;
+        cursor: pointer;
+        font-size: 16px;
+      }
+      input,
+      textarea {
+        width: 90%;
+        padding: 10px;
+        margin-top: 8px;
+        border-radius: 8px;
+        border: 1px solid #999;
+      }
+    </style>
   </head>
   <body>
-    <h1>I Love Maharani ❤️</h1>
+    <div class="love-box">
+      <h2>For Maharani ❤️</h2>
 
-    <button onclick="sendFeedback()">Send Feedback</button>
+      <button onclick="showLove()">Click Here</button>
+      <p id="message"></p>
 
-    <div id="nameField" style="display: none">
-      <input id="nameInput" placeholder="Enter your name" />
-      <button onclick="saveName()">Submit Name</button>
+      <hr />
+
+      <h3>Leave your feedback</h3>
+
+      <form id="feedbackForm" onsubmit="sendFeedback(event)">
+        <textarea id="feedback" placeholder="Your feedback"></textarea>
+        <br /><br />
+        <button type="submit">Send Feedback</button>
+      </form>
+
+      <p id="feedback-msg" style="color: green"></p>
+
+      <div id="nameSection" style="display: none; margin-top: 20px">
+        <input type="text" id="theirName" placeholder="Enter your name" />
+        <br /><br />
+        <button onclick="submitName()">Submit Name</button>
+        <p id="nameThanks" style="color: blue"></p>
+      </div>
     </div>
 
     <script>
-      function sendFeedback() {
+      function showLove() {
+        document.getElementById("message").innerHTML =
+          "❤️ I love you Maharani. You are the most special person in my life. ❤️";
+      }
+
+      function sendFeedback(event) {
+        event.preventDefault();
+
+        let data = {
+          feedback: document.getElementById("feedback").value,
+        };
+
+        // SEND FEEDBACK TO SERVER
         fetch("/save-feedback", {
           method: "POST",
           headers: { "Content-Type": "application/json" },
-          body: JSON.stringify({
-            message: "Someone clicked the button",
-          }),
-        }).then(() => {
-          alert("Feedback sent!");
-          document.getElementById("nameField").style.display = "block";
-        });
+          body: JSON.stringify(data),
+        })
+          .then((res) => res.text())
+          .then(() => {
+            document.getElementById("feedbackForm").style.display = "none";
+            document.getElementById("feedback-msg").innerHTML =
+              "Thank you for your feedback!";
+            document.getElementById("nameSection").style.display = "block";
+          });
       }
 
-      function saveName() {
-        const name = document.getElementById("nameInput").value;
+      function submitName() {
+        let name = document.getElementById("theirName").value;
 
-        fetch("/save-feedback", {
+        if (name.trim() === "") {
+          alert("Please enter your name!");
+          return;
+        }
+
+        fetch("/save-name", {
           method: "POST",
           headers: { "Content-Type": "application/json" },
           body: JSON.stringify({ name }),
-        }).then(() => {
-          alert("Name saved!");
         });
+
+        document.getElementById("nameThanks").innerHTML =
+          "Thank you, " + name + "! Your response is saved privately.";
       }
     </script>
   </body>
